SVM plus propre + modification des indicateurs de distortion + marche sur tout les os + cool cool cool

--- a/knn_vega.ipynb
+++ b/knn_vega.ipynb
@@ -96,8 +96,7 @@
     "def image_treatment(image,label):\n",
     "    rawImages.append(image_to_feature_vector(image))\n",
     "    features.append(extract_color_histogram(image))\n",
-    "    labels.append(label)\n",
-    "    "
+    "    labels.append(label)"
    ]
   },
   {
