Ajout d'un commentaire + rename du svm

--- a/knn_vega.ipynb
+++ b/knn_vega.ipynb
@@ -87,6 +87,8 @@
     "    # return the flattened histogram as the feature vector\n",
     "    return hist.flatten()\n",
     "\n",
+    "#Le number corresponds au nombre d'images qui vont etre générées\n",
+    "#Donc plus il est faible moins longs seront les calculs\n",
     "def create_distortion(image,number):\n",
     "    images = []\n",
     "    for i in range(1,number):\n",
